<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/avatar_description"
        android:src="@drawable/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        android:text="Квантовая суперпозиция. Университет Квантовых взаимоотношений" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Квантовая суперпозиция — это состояние, при котором частица (например, электрон) может находиться в нескольких состояниях одновременно, пока на неё не воздействуют измерением. Другими словами, частица существует сразу во всех возможных вариантах, которые «схлопываются» в один определённый результат только при наблюдении.
Это явление — одно из ключевых отличий квантового мира от классического, где объект может находиться только в одном состоянии в данный момент времени.
Принцип:Суперпозиция представляет собой сумму (наложение) всех возможных состояний, в которых может находиться система. Математически состояние такой системы описывается волновой функцией, которая содержит в себе всю информацию о системе. "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:text="18 марта в 11:36" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published,menu" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu"
        android:contentDescription="@string/menu_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:tint="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/link_block"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#1A000000"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <TextView
            android:id="@+id/link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Иследования кварков: 4 уровня мира"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fisik.ru"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_block">

        <ImageButton
            android:id="@+id/like"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like_description"
            android:src="@drawable/ic_favorite_border"
            app:tint="@color/purple_500" />

        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="13.2K"
            android:textColor="@color/purple_500"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_description"
            android:src="@drawable/ic_share"
            app:tint="@color/purple_500" />

        <TextView
            android:id="@+id/share_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="4.3K"
            android:textColor="@color/purple_500"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/views_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/views_description"
            android:src="@drawable/ic_visibility"
            app:tint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/views_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.7K"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>