<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/rounded_bg"
    android:elevation="8dp"
    >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_circle"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/avatar_description"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:src="@drawable/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.AppTheme.Circle"
        tools:ignore="UnusedAttribute" />
    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        android:text="Квантовая суперпозиция. Университет Квантовых взаимоотношений" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Квантовая суперпозиция — это состояние, при котором частица (например, электрон) может находиться в нескольких состояниях одновременно, пока на неё не воздействуют измерением. Другими словами, частица существует сразу во всех возможных вариантах, которые «схлопываются» в один определённый результат только при наблюдении.
Это явление — одно из ключевых отличий квантового мира от классического, где объект может находиться только в одном состоянии в данный момент времени.
Принцип:Суперпозиция представляет собой сумму (наложение) всех возможных состояний, в которых может находиться система. Математически состояние такой системы описывается волновой функцией, которая содержит в себе всю информацию о системе. "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/author"
        app:layout_constraintStart_toStartOf="@id/author"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:text="18 марта в 11:36" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,author,published,menu" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/menu_description"
        app:icon="@drawable/ic_menu"
        app:iconGravity="textStart"
        style="@style/Widget.AppTheme.MenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        />

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#FFFFFFFF"/>

    <LinearLayout
        android:id="@+id/link_block"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#1A000000"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoContainer"
        >

        <TextView
            android:id="@+id/link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Куплю Гараж : 8 923 542-88-23"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Garaj.ru"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_block">

        <!-- Кнопка лайка (Toggle Button) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/like_description"
            app:icon="@drawable/ic_like_border"
            app:iconGravity="textStart"
            android:text="0"
            style="@style/Widget.AppTheme.LikeButton" />

        <!-- Кнопка репоста -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/share_description"
            app:icon="@drawable/ic_share"
            app:iconGravity="textStart"
            android:text="0"
            style="@style/Widget.AppTheme.ShareButton" />

        <!-- Кнопка просмотров (не кликабельная, просто для отображения) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:clickable="false"
            android:focusable="false"
            android:contentDescription="@string/views_description"
            app:icon="@drawable/ic_visibility"
            app:iconGravity="textStart"
            android:text="0"
            style="@style/Widget.AppTheme.ShareButton" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

